src/objects/Profile__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Id_Admin_Apex__c</fullName>
        <label>Id Admin Apex</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Admin__c</fullName>
        <label>Id Admin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Associate_Ecommerce_Europa_e_ROW__c</fullName>
        <label>Id Associate Ecommerce Europa e ROW</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Associate_Ecommerce_USA__c</fullName>
        <label>Id Associate Ecommerce USA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Associate__c</fullName>
        <label>Id Associate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Boutique_Apex__c</fullName>
        <label>Id Boutique Apex</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Boutique__c</fullName>
        <label>Id Boutique</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Demandware_Apex__c</fullName>
        <label>Id Demandware Apex</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Demandware__c</fullName>
        <label>Id Demandware</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_First_Level_Approver_MTM__c</fullName>
        <label>Id First Level Approver MTM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Sarto__c</fullName>
        <label>Id Sarto</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Test_Contact_Card__c</fullName>
        <label>Id Test Contact Card</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Xstore_Apex__c</fullName>
        <label>Id Xstore Apex</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Xstore__c</fullName>
        <label>Id Xstore</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Profile</label>
</CustomObject>